fixed IE bug with list gaps (old IE bug)

--- a/assets/stylesheets/record_select.css
+++ b/assets/stylesheets/record_select.css
@@ -24,6 +24,7 @@
 
 .record-select ol a {
   display: block;
+  width: 100%;
   background-color: #e6f2ff;
   padding: 2px 4px;
 }
